Fixed the footer on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,16 +26,7 @@ body {
   font-size: 20px;
   color: #9d4edd;
 }
-#footer {
-  position: fixed;
-  bottom: 0%;
-  left: 0%;
-  width: 100%;
-  height: 22px;
-  background-color: #dd9ed0;
-  color: #9d4edd;
-  text-align: center;
-}
+
 #unicorn-subtext p {
   font-size: 18px;
   color: #9d4edd;
@@ -64,4 +55,18 @@ body {
   margin-left: auto;
   min-width: 10%;
   max-width: 100%;
+}
+.paddingbottom {
+  padding-bottom: 44px;
+}
+
+.footer {
+  background-color: #dd9ed0;
+  color: #9d4edd;
+  text-align: center;
+  position: fixed;
+  height: 22px;
+  width: 100%;
+  text-align: center;
+  bottom: 0%;
 }
